[package]
name = "autocxx_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0.83"
autocxx = { version = "0.23.1" }

[build-dependencies]
autocxx-build = { version = "0.23.1" }
miette = { version = "5", features = ["fancy"] }

